--- a/bioSite.css
+++ b/bioSite.css
@@ -6,10 +6,33 @@ body {
 
 p {
     font-family: "Open Sans Condensed", "Arial", sans-serif;
+    font-weight: bold;
+    padding-left: 50px;
+    padding-right: 10%;
+}
+
+figcaption {
+    font-family: "Open Sans Condensed", "Arial", sans-serif;
+    font-style: italic;
+    font-size: smaller;
 }
 
 h1 {
     font-family: "Viga", "Arial", sans-serif;
+    text-transform: uppercase;
+    font-weight: 100;
+    font-stretch: narrower;
+    font-size: 64px;
+    padding-left: 50px
+}
+
+h2 {
+    font-family: "Viga", "Arial", sans-serif;
+    text-transform: uppercase;
+    color: #312E8C;
+    text-decoration: underline #F29BB2;
+    text-align: center;
+    font-stretch: expanded;
 }
 
 
@@ -48,6 +71,7 @@ h1 {
 #main {
     background: #F3F2EF;
     grid-area: main;
+    text-align: left;
 }
 
 #item1 {
