--- a/bioSite.css
+++ b/bioSite.css
@@ -141,6 +141,15 @@ h2 {
     grid-area: item3Hobbies;
 }
 
+footer {
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    text-decoration: none;
+    color: white;
+}
+
 @media only screen and (max-width:550px){
     .container{
         grid-template-columns: 1fr;
